fixed bug with overlapping action buttons

--- a/Finance.WebApp/src/app/stock-list/stock-info/stock-info.component.less
+++ b/Finance.WebApp/src/app/stock-list/stock-info/stock-info.component.less
@@ -48,8 +48,9 @@
   background-color: #fff;
   border: 1px solid #ccc;
   border-radius: 4px;
-  padding: 10px;
+  padding: 8px;
   display: none;
+  z-index: 1;
 }
 
 .card .card-actions .action-options .action-button {
